# outfit418-backup-ratting

./: setup.cfg
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml  local.py  requirements.txt
.github/workflows/: python-publish.yml  python-test.yml
outfit418_backup_ratting/: __init__.py  auth_hooks.py  models.py  tasks.py  urls.py  utils.py  views.py
outfit418_backup_ratting/migrations/: 0001_initial.py
outfit418_backup_ratting/templates/outfit418_backup_ratting/: audit.html  index.html
