[bumpversion]
current_version = 0.0.1
commit = True
tag = True
sign_tags = True

[bumpversion:file:outfit418_backup_ratting/__init__.py]
search = __version__ = '{current_version}'
replace = __version__ = '{new_version}'

[metadata]
name = outfit418_backup_ratting
version = attr: outfit418_backup_ratting.__version__
author_email = matteo.ghia@yahoo.it
description = Backup for Outfit418 data
license = GNU General Public License v3
license_file = LICENSE
keywords = 
	allianceauth
	allianceauth_pve
	Outfit418
	eveonline