[bumpversion]
current_version = 0.0.2
commit = True
tag = True
sign_tags = True

[bumpversion:file:outfit418_backup_ratting/__init__.py]
search = __version__ = '{current_version}'
replace = __version__ = '{new_version}'

[metadata]
name = outfit418_backup_ratting
version = attr: outfit418_backup_ratting.__version__
author_email = matteo.ghia@yahoo.it
description = Backup for Outfit418 data
license = GNU General Public License v3
license_file = LICENSE
keywords = 
	allianceauth
	allianceauth_pve
	Outfit418
	eveonline
url = https://github.com/Maestro-Zacht/outfit418-backup-ratting

[options]
packages = find:
python_requires = >=3.6
include_package_data = True
zip_safe = False

[options.packages.find]
include = outfit418_backup_ratting*

[bdist_wheel]
universal = 1

[flake8]
exclude = docs
